--- a/collecting_acorns.css
+++ b/collecting_acorns.css
@@ -21,9 +21,9 @@ body .popup_section {
   z-index: 999;
 }
 body .popup_section .popup_card {
-  width: 380px;
-  height: 740px;
-  padding: 24px 22px;
+  width: 240px;
+  height: 500px;
+  padding: 20px 12px;
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
@@ -31,10 +31,11 @@ body .popup_section .popup_card {
   background-color: #FFffff;
   border: 0.5px solid #000000;
   border-radius: 5px;
+  font-size: 14px;
 }
 body .popup_section .popup_card .popup_header {
   width: 100%;
-  height: 32px;
+  height: 24px;
   display: flex;
   justify-content: space-between;
 }
@@ -55,10 +56,10 @@ body .popup_section .popup_card .popup_header .popup_header_btn .popup_btn_baske
      object-fit: contain;
   /* 이미지가 비율을 유지하면서 컨테이너에 맞도록 */
 }
-body .popup_section .popup_card .popup_header .popup_header_btn .popup_btn_basket .popup_btn_share {
+body .popup_section .popup_card .popup_header .popup_header_btn .popup_btn_share {
   height: 100%;
 }
-body .popup_section .popup_card .popup_header .popup_header_btn .popup_btn_basket .popup_btn_share img {
+body .popup_section .popup_card .popup_header .popup_header_btn .popup_btn_share img {
   width: 100%;
   height: 100%;
   -o-object-fit: contain;
@@ -67,11 +68,13 @@ body .popup_section .popup_card .popup_header .popup_header_btn .popup_btn_baske
 body .popup_section .popup_card .popup_header .popup_header_link {
   display: flex;
   align-items: center;
-  font-size: 15px;
+  font-size: 14px;
+}
+body .popup_section .popup_card .popup_header .popup_header_link a {
+  color: #000000;
 }
 body .popup_section .popup_card .popup_img {
   overflow: hidden;
-  padding-top: 20px;
   box-sizing: border-box;
 }
 body .popup_section .popup_card .popup_img img {
@@ -84,8 +87,7 @@ body .popup_section .popup_card .popup_img img {
 }
 body .popup_section .popup_card .popup_text_container {
   flex: 1;
-  font-size: 15px;
-  line-height: 22px;
+  line-height: 20px;
   display: flex;
   flex-direction: column;
   gap: 10px;
@@ -133,23 +135,26 @@ body .body_container {
   height: 100vh;
 }
 body .section_left {
-  width: 34%;
+  position: fixed;
+  height: 100vh;
+  top: 0px;
+  left: 0px;
+  width: 400px;
   background-image: url(@_collecting-acorns/title_img.png);
   background-size: cover;
   background-position: center center;
-  position: relative;
   border-right: 0.5px solid #292929;
 }
 body .section_left .head_section_container {
-  padding: 32px 11px;
+  padding: 20px 11px;
   width: 100%;
   text-align: center;
   box-sizing: border-box;
 }
 body .section_left .head_section_container .title_text {
   font-family: "Gowun Batang", serif;
-  font-size: 5.5vw;
-  line-height: 80px;
+  font-size: 54px;
+  line-height: 54px;
   text-align: left;
 }
 body .section_left .head_section_container .head_info_container {
@@ -157,7 +162,7 @@ body .section_left .head_section_container .head_info_container {
   display: flex;
   justify-content: space-between;
   gap: 30px;
-  padding: 0px 10px;
+  padding: 0px 20px;
   padding-top: 10px;
   box-sizing: border-box;
 }
@@ -203,7 +208,7 @@ body .section_left .head_section_container .head_info_my-acorns {
 body .section_left .bot_section_container {
   width: 100%;
   position: absolute;
-  bottom: 36px;
+  bottom: 20px;
   display: flex;
   align-items: end;
   gap: 30px;
@@ -220,6 +225,12 @@ body .section_left .bot_section_container .bot_maker {
   flex: 1;
   font-weight: 500;
   text-align: right;
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+}
+body .section_left .bot_section_container .bot_maker a {
+  color: #3A3A3A;
 }
 body .section_right {
   flex: 1;
@@ -227,6 +238,7 @@ body .section_right {
   grid-template-columns: 1fr 1fr 1fr 1fr;
   gap: 11px;
   padding: 11px 11px;
+  padding-left: 411.5px;
 }
 body .section_right .card_item {
   height: 16vw;
@@ -317,6 +329,19 @@ body .section_right .card_12 {
   background-color: #FF926F;
 }
 @media only screen and (max-width: 780px) {
+  body .popup_section .popup_card {
+    width: 320px;
+    height: 740px;
+    justify-content: space-between;
+  }
+  body .popup_section .popup_card .popup_img {
+    width: 100%;
+  }
+  body .popup_section .popup_card .popup_text_container {
+    font-size: 16px;
+    line-height: 21px;
+    justify-content: space-between;
+  }
   body .body_container {
     width: 100%;
     display: flex;
@@ -326,8 +351,10 @@ body .section_right .card_12 {
   }
   body .body_container .section_left {
     width: 100%;
-    height: 80vh;
+    height: 810px;
     border: none;
+    position: absolute;
+    top: 0px;
   }
   body .body_container .section_left .head_section_container {
     padding: 24px 14px;
@@ -378,9 +405,10 @@ body .section_right .card_12 {
     grid-template-columns: 1fr;
     gap: 18px;
     padding: 18px 18px;
+    padding-top: 810px;
   }
   body .body_container .section_right .card_item {
-    height: 37vh;
+    height: 44vh;
     font-size: 18px;
   }
   body .body_container .section_right .card_item .add-info-text {
