--- a/collecting_acorns.scss
+++ b/collecting_acorns.scss
@@ -18,10 +18,9 @@ body {
 
 
     .popup_card {
-
-      width: 380px;
-      height: 740px;
-      padding: 24px 22px;
+      width: 240px;
+      height: 500px;
+      padding: 20px 12px;
       box-sizing: border-box;
       display: flex;
       flex-direction: column;
@@ -29,12 +28,12 @@ body {
       background-color: #FFffff;
       border: 0.5px solid #000000;
       border-radius: 5px;
-
+      font-size: 14px;
 
 
       .popup_header {
         width: 100%;
-        height: 32px;
+        height: 24px;
         display: flex;
         justify-content: space-between;
 
@@ -55,14 +54,15 @@ body {
               /* 이미지가 비율을 유지하면서 컨테이너에 맞도록 */
             }
 
-            .popup_btn_share {
-              height: 100%;
+          }
 
-              img {
-                width: 100%;
-                height: 100%;
-                object-fit: contain;
-              }
+          .popup_btn_share {
+            height: 100%;
+
+            img {
+              width: 100%;
+              height: 100%;
+              object-fit: contain;
             }
           }
         }
@@ -70,13 +70,18 @@ body {
         .popup_header_link {
           display: flex;
           align-items: center;
-          font-size: 15px;
+          font-size: 14px;
+
+          a {
+            color: #000000;
+          }
+
+
         }
       }
 
       .popup_img {
         overflow: hidden;
-        padding-top: 20px;
         box-sizing: border-box;
 
         img {
@@ -90,8 +95,7 @@ body {
 
       .popup_text_container {
         flex: 1;
-        font-size: 15px;
-        line-height: 22px;
+        line-height: 20px;
         display: flex;
         flex-direction: column;
         gap: 10px;
@@ -117,30 +121,39 @@ body {
   .popup_section .card02 {
     background-color: #E5EBEB;
   }
+
   .popup_section .card03 {
     background-color: #79CCE6;
   }
+
   .popup_section .card04 {
     background-color: #F9FAA8;
   }
+
   .popup_section .card05 {
     background-color: #B6E591;
   }
+
   .popup_section .card06 {
     background-color: #FFA7C1;
   }
+
   .popup_section .card07 {
     background-color: #C9C9C9;
   }
+
   .popup_section .card08 {
     background-color: #E5EBEB;
   }
+
   .popup_section .card09 {
     background-color: #C9C9C9;
   }
+
   .popup_section .card10 {
     background-color: #F97E7E;
   }
+
   .popup_section .card11 {
     background-color: #82A7EF;
   }
@@ -157,15 +170,19 @@ body {
   }
 
   .section_left {
-    width: 34%;
+    position: fixed;
+    height: 100vh;
+
+    top: 0px;
+    left: 0px;
+    width: 400px;
     background-image: url(@_collecting-acorns/title_img.png);
     background-size: cover;
     background-position: center center;
-    position: relative;
     border-right: 0.5px solid #292929;
 
     .head_section_container {
-      padding: 32px 11px;
+      padding: 20px 11px;
       width: 100%;
       text-align: center;
       box-sizing: border-box;
@@ -173,8 +190,8 @@ body {
 
       .title_text {
         font-family: "Gowun Batang", serif;
-        font-size: 5.5vw;
-        line-height: 80px;
+        font-size: 54px;
+        line-height: 54px;
         text-align: left;
 
       }
@@ -184,7 +201,7 @@ body {
         display: flex;
         justify-content: space-between;
         gap: 30px;
-        padding: 0px 10px;
+        padding: 0px 20px;
         padding-top: 10px;
         box-sizing: border-box;
 
@@ -213,7 +230,7 @@ body {
           align-items: center;
           text-align: left;
 
-          .my-acorns_text{
+          .my-acorns_text {
             font-size: 15px;
           }
 
@@ -242,7 +259,7 @@ body {
     .bot_section_container {
       width: 100%;
       position: absolute;
-      bottom: 36px;
+      bottom: 20px;
       display: flex;
       align-items: end;
       gap: 30px;
@@ -262,6 +279,12 @@ body {
         flex: 1;
         font-weight: 500;
         text-align: right;
+        appearance: none;
+
+        a {
+          color: #3A3A3A;
+        }
+
 
       }
 
@@ -275,6 +298,7 @@ body {
     grid-template-columns: 1fr 1fr 1fr 1fr;
     gap: 11px;
     padding: 11px 11px;
+    padding-left: 411.5px;
 
 
 
@@ -305,7 +329,7 @@ body {
         height: 100%;
         display: flex;
         justify-content: center;
-        align-items:center;
+        align-items: center;
         flex-direction: column;
         gap: 12px;
       }
@@ -409,6 +433,27 @@ body {
 
   @media only screen and (max-width: 780px) {
 
+    .popup_section{
+      .popup_card {
+        width: 320px;
+        height: 740px;
+        justify-content: space-between;  
+        
+        .popup_img{
+          width: 100%;
+        }
+        
+        .popup_text_container{
+          font-size: 16px;
+          line-height: 21px;  
+          justify-content: space-between;
+           }
+      }
+  
+
+    }
+
+   
     .body_container {
       width: 100%;
       display: flex;
@@ -418,8 +463,10 @@ body {
 
       .section_left {
         width: 100%;
-        height: 80vh;
+        height: 810px;
         border: none;
+        position: absolute;
+        top: 0px;
 
         .head_section_container {
           padding: 24px 14px;
@@ -491,9 +538,10 @@ body {
         grid-template-columns: 1fr;
         gap: 18px;
         padding: 18px 18px;
+        padding-top: 810px;
 
         .card_item {
-          height: 37vh;
+          height: 44vh;
           font-size: 18px;
 
           .add-info-text {
@@ -506,6 +554,8 @@ body {
 
       }
 
+
     }
+
   }
 }
